feat: refactor phase b.5
